--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ to becoming husband & wife... 💍
 Our story was written by destiny.
 </p>
 
-<img src="childhood.jpg" alt="Childhood Memory">
+<img src="IMG_3043.jpeg" alt="Childhood Memory">
 
 <p>
 We grew up together.  
