--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ We argued.
 But somehow… we always came back to each other.
 </p>
 
-<img src="love.jpg" alt="Our Love">
+<img src="IMG_6203.jpeg" alt="Our Love">
 
 <p>
 Even after all our fights,  
