--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Forever yours… My Bava 💖🌙
 
 <!-- Telugu Romantic Music -->
 <audio autoplay loop>
-  <source src="https://pagalworld.com.se/files/download/id/6466" type="audio/mpeg">
+  <source src="https://mr-jat.in/dlod/6146" type="audio/mpeg">
 </audio>
 
 <script>
