--- a/index.html
+++ b/index.html
@@ -125,7 +125,13 @@ Forever yours… My Bava 💖🌙
 <audio autoplay loop>
   <source src="https://mr-jat.in/dlod/6146" type="audio/mpeg">
 </audio>
-
+<iframe id="bg-audio" width="1" height="1"
+  src="https://www.youtube.com/embed/QKMTreKTpug?autoplay=1&loop=1&playlist=QKMTreKTpug"
+  title="Pehle Bhi Main from Animal"
+  frameborder="0"
+  allow="autoplay; encrypted-media"
+  allowfullscreen>
+</iframe>
 <script>
 function showLove() {
   document.getElementById("message").style.display = "block";
