--- a/index.html
+++ b/index.html
@@ -93,12 +93,44 @@ Our story was written by destiny.
 
 <img src="IMG_3043.jpeg" alt="Childhood Memory">
 
-<p>
-We grew up together.  
-We fought.  
-We argued.  
-But somehow… we always came back to each other.
-</p>
+    <div class="heart">💖</div>
+
+    <div class="card">
+      <p>
+        This is our <b>first Valentine’s Day after marriage</b>,
+        and I wanted to do something special just for you.
+      </p>
+
+      <p>
+        We’ve known each other since childhood…  
+        grew up as <b>bava & maradalu</b>,  
+        and somehow destiny decided,  
+        <b>“These two belong together.”</b>
+      </p>
+
+      <p>
+        Yes, we fight.  
+        Yes, we get angry.  
+        Yes, we hurt each other sometimes.
+      </p>
+
+      <p>
+        But even after all that,  
+        <b>I still choose you. Every single day.</b>
+      </p>
+
+      <p>
+        You are my comfort,  
+        my safe place,  
+        my forever person.
+      </p>
+
+      <p>
+        I may not say it every day,  
+        but please know this:
+      </p>
+
+      <h2>❤️ I LOVE YOU ❤️</h2>
 
 <img src="IMG_6203.jpeg" alt="Our Love">
 
