--- a/index.html
+++ b/index.html
@@ -154,15 +154,10 @@ Forever yours… My Bava 💖🌙
 </div>
 
 <!-- Telugu Romantic Music -->
-<audio autoplay loop>
-  <source src="https://mr-jat.in/dlod/6146" type="audio/mpeg">
-</audio>
-<iframe id="bg-audio" width="1" height="1"
+<iframe width="1" height="1"
   src="https://www.youtube.com/embed/QKMTreKTpug?autoplay=1&loop=1&playlist=QKMTreKTpug"
-  title="Pehle Bhi Main from Animal"
   frameborder="0"
-  allow="autoplay; encrypted-media"
-  allowfullscreen>
+  allow="autoplay; encrypted-media">
 </iframe>
 <script>
 function showLove() {
