--- a/index.html
+++ b/index.html
@@ -154,11 +154,9 @@ Forever yours… My Bava 💖🌙
 </div>
 
 <!-- Telugu Romantic Music -->
-<iframe width="1" height="1"
-  src="https://www.youtube.com/embed/QKMTreKTpug?autoplay=1&loop=1&playlist=QKMTreKTpug"
-  frameborder="0"
-  allow="autoplay; encrypted-media">
-</iframe>
+<audio autoplay loop>
+  <source src="your-free-song.mp3" type="audio/mpeg">
+</audio>
 <script>
 function showLove() {
   document.getElementById("message").style.display = "block";
