--- a/index.html
+++ b/index.html
@@ -5,50 +5,76 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Our First Valentine ❤️</title>
 <style>
-  /* Elegant background and body */
+  /* Elegant background */
   body {
     margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(135deg, #f5f7fa, #c3cfe2); /* soft elegant gradient */
-    color: #333;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #ece9e6, #ffffff);
+    color: #2c2c2c;
     text-align: center;
-    padding: 30px;
+    padding: 40px 20px;
   }
 
   h1 {
-    margin-top: 20px;
     font-size: 3em;
-    color: #4b3f72;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+    color: #5b3c88;
+    margin-bottom: 30px;
+    font-weight: 600;
+    letter-spacing: 1px;
   }
 
   .container {
     max-width: 900px;
     margin: auto;
-    padding: 20px;
   }
 
+  /* Side by side images */
+  .image-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+  }
+
+  .image-row img {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    border-radius: 20px;
+    object-fit: cover;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
+  }
+
+  .image-row img:hover {
+    transform: scale(1.03);
+  }
+
+  /* Glassy card */
   .card {
-    background: rgba(255,255,255,0.6);
-    backdrop-filter: blur(10px);
-    padding: 30px;
+    background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(12px);
     border-radius: 25px;
-    margin-top: 30px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    padding: 30px 25px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+    margin-bottom: 40px;
   }
 
   p {
-    font-size: 1.3rem;
-    line-height: 1.8;
+    font-size: 1.25rem;
+    line-height: 1.7;
     margin: 15px 0;
   }
 
   h2 {
+    font-size: 2rem;
+    color: #5b3c88;
     margin: 25px 0 15px 0;
-    color: #4b3f72;
-    font-size: 2em;
   }
 
+  /* Buttons */
   button {
     padding: 14px 28px;
     margin: 10px;
@@ -57,37 +83,28 @@
     font-size: 1.1em;
     cursor: pointer;
     transition: all 0.3s ease;
-    background: linear-gradient(45deg, #6a85b6, #bac8e0);
+    background: linear-gradient(45deg, #8e44ad, #a569bd);
     color: white;
   }
 
   button:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 15px rgba(106,133,182,0.7);
-  }
-
-  /* Side-by-side images */
-  .image-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-top: 25px;
-    flex-wrap: wrap; /* responsive on small screens */
-  }
-
-  .image-row img {
-    width: 45%;
-    max-width: 400px;
-    border-radius: 20px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.15);
-    object-fit: cover;
+    box-shadow: 0 0 15px rgba(142,68,173,0.7);
   }
 
   #message {
-    font-size: 1.4em;
-    color: #4b3f72;
+    font-size: 1.35em;
+    color: #5b3c88;
     margin-top: 20px;
+  }
+
+  /* Responsive */
+  @media(max-width: 850px){
+    .image-row img { max-width: 48%; }
+  }
+
+  @media(max-width: 600px){
+    .image-row img { max-width: 100%; }
   }
 </style>
 </head>
@@ -97,64 +114,36 @@
 
 <div class="container">
 
-  <!-- Side by side images -->
+  <!-- Images side by side -->
   <div class="image-row">
     <img src="IMG_3043.jpeg" alt="Childhood Memory">
     <img src="IMG_6203.jpeg" alt="Our Love">
   </div>
 
+  <!-- Card with romantic text -->
   <div class="card">
-    <p>
-      From childhood memories... 👶  
-      to becoming husband & wife... 💍  
-      Our story was written by destiny.
-    </p>
+    <p>From childhood memories... 👶 to becoming husband & wife... 💍 Our story was written by destiny.</p>
 
-    <p>
-      This is our <b>first Valentine’s Day after marriage</b>,
-      and I wanted to do something special just for you.
-    </p>
+    <p>This is our <b>first Valentine’s Day after marriage</b>, and I wanted to do something special just for you.</p>
 
-    <p>
-      We’ve known each other since childhood…  
-      grew up as <b>bava & maradalu</b>,  
-      and somehow destiny decided,  
-      <b>“These two belong together.”</b>
-    </p>
+    <p>We’ve known each other since childhood… grew up as <b>bava & maradalu</b>, and somehow destiny decided, <b>“These two belong together.”</b></p>
 
-    <p>
-      Yes, we fight.  
-      Yes, we get angry.  
-      Yes, we hurt each other sometimes.
-    </p>
+    <p>Yes, we fight. Yes, we get angry. Yes, we hurt each other sometimes.</p>
 
-    <p>
-      But even after all that,  
-      <b>I still choose you. Every single day.</b>
-    </p>
+    <p>But even after all that, <b>I still choose you. Every single day.</b></p>
 
-    <p>
-      You are my comfort,  
-      my safe place,  
-      my forever person.
-    </p>
+    <p>You are my comfort, my safe place, my forever person.</p>
 
     <h2>❤️ I LOVE YOU ❤️</h2>
 
-    <p>
-      Even after all our fights,  
-      my heart still chooses you.  
-      Today. Tomorrow. Forever.
-    </p>
+    <p>Even after all our fights, my heart still chooses you. Today. Tomorrow. Forever.</p>
 
     <h2>Do You Love Me? 😘</h2>
 
     <button id="yesBtn" onclick="showLove()">Yes ❤️</button>
     <button id="noBtn" onmouseover="moveButton()">No 😜</button>
 
-    <p id="message" style="display:none;">
-      Forever yours… My Bava 💖🌙
-    </p>
+    <p id="message" style="display:none;">Forever yours… My Bava 💖🌙</p>
   </div>
 
 </div>
@@ -166,12 +155,11 @@
 </audio>
 
 <script>
-// Desktop autoplay
+// Music autoplay
 const audio = document.getElementById('bgAudio');
 let musicStarted = false;
 audio.play().catch(e => console.log("Desktop autoplay blocked:", e));
 
-// Mobile scroll autoplay
 window.addEventListener('scroll', () => {
   if (!musicStarted) {
     audio.play().then(() => musicStarted = true)
@@ -179,14 +167,14 @@ window.addEventListener('scroll', () => {
   }
 });
 
-// Button functions
+// Buttons
 function showLove() {
   document.getElementById("message").style.display="block";
 }
 
 function moveButton() {
   var btn = document.getElementById("noBtn");
-  btn.style.position = "absolute";
+  btn.style.position="absolute";
   btn.style.top = Math.random()*80 + "%";
   btn.style.left = Math.random()*80 + "%";
 }
